test fix for radio button alignments

--- a/assets/css/cfb-pickem/pickem.css
+++ b/assets/css/cfb-pickem/pickem.css
@@ -72,11 +72,10 @@ select {
     width: 125px;
 }
 .away-radio {
-    float: left;
     margin-left: 1px;
 }
 .home-radio {
-    float: right;
+    margin-right: 1px;
 }
 
 
